--- a/WebContent/main.css
+++ b/WebContent/main.css
@@ -2,7 +2,7 @@ body {
     background-image: url("images/bg.jpg");
     //background-size: 100% 100%;
     background-position: bottom;
-    overflow: hidden;
+    //overflow: hidden;
     position: relative;
     background-repeat: no-repeat;
 }
@@ -10,6 +10,7 @@ body {
     background-image: url("images/index.jpg");
     background-size: 100% 100%;
     background-repeat: no-repeat;
+    overflow: hidden;
 }
 
 #login{
